--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         game.network.emitter.emit(e_PacketId[event.opcode], event);
     };
     let urlObj = {
-        localhost: "ws://localhost:8080",
+        localhost: "ws://192.168.1.105:8080",
     }
     let proxies = {};
     let prfKeys = {};
